doc for albums and locations fixed
