# src/locations/location.router.ts
@@ -14,37 +14,33 @@ import { isAuthenticated } from '../midlewares';
 export const locationRouter = express.Router();
 
 //GET: all Locations
-//#swagger.tags = ['Locations']
-//#swagger.summary: 'List all locations'
-//#swagger.description: 'Returns a list of all locations, optionally filtered by search term'
-/*#swagger.parameters['search']:{
-  in: query
-    schema:
-      type: string
-    description: 'A search term to filter the list of locations'
-}*/
-/*#swagger.responses[200] = { 
-    description: 'OK'
-    schema: { $ref: "#/definitions/Location" },   
-    }
-*/
-/*#swagger.responses[500] = { 
-    description: 'Internal Server Error'  
-    }
-*/
-//TODO: swagger.security
 locationRouter.get(
   '/',
   isAuthenticated,
   query('search').isString().optional(),
   async (req: Request, res: Response) => {
+    //#swagger.tags = ['Locations']
+    //#swagger.summary = 'List all locations'
+    //#swagger.description: = 'Returns a list of all locations, optionally filtered by search term'
+    /*#swagger.parameters['search'] = {
+      in: query,
+      schema:{type: string},
+      description: 'A search term to filter the list of locations'
+    }*/ 
     try {
       const locations =
         await LocationServices.listAllLocations(
           req.query.search?.toString()
         );
+      /*#swagger.responses[200] = { 
+      description: 'OK',
+      schema: { $ref: "#/definitions/Location" }   
+      }*/
       return res.status(200).json(locations);
     } catch (err) {
+      /*#swagger.responses[500] = { 
+      description: 'Internal Server Error'  
+      }*/
       return res.status(500).json(err);
     }
   }
@@ -55,34 +51,16 @@ locationRouter.get(
 locationRouter.get(
   '/:id',
   isAuthenticated,
-  async (req: Request, res: Response) => {
-    /*
-  #swagger.tags = ['Locations']
-  #swagger.summary: 'Get location by id'
-  #swagger.description: 'Retrieve an location by its id'
-  #swagger.parameters['id'] = {
-        in: 'path',
-        description: 'Numeric ID of the location to retrieve'
-        required: true,
-        type: 'integer'
-
-  #swagger.responses[200] = { 
-    description: 'The location with the given id'
-    content:
-      application/json:
-        schema:
-          type: array
-          items:  $ref: "#/definitions/Location"
-    }
-
-  #swagger.responses[404] = { 
-    description: 'Location not found' 
-    }
-
-  #swagger.responses[500] = { 
-    description: 'Internal server error'  
-    }
-*/
+  async (req: Request, res: Response) => { 
+    //#swagger.tags = ['Locations']
+    //#swagger.summary = 'Get location by id'
+    //#swagger.description = 'Retrieve an location by its id'
+    /*#swagger.parameters['id'] = {
+      in: 'path',
+      description: 'Numeric ID of the location to retrieve',
+      required: true,
+      type: 'integer'
+    }*/
     const locationId: number = parseInt(req.params.id, 10);
 
     try {
@@ -90,11 +68,21 @@ locationRouter.get(
         locationId
       );
       if (location) {
+        /*#swagger.responses[200] = { 
+          schema:{$ref: "#/definitions/Location"},
+          description: 'The location with the given id'    
+          }*/
         return res.status(200).json(location);
       }
-
+      /*#swagger.responses[404] = { 
+        description: 'Location not found' 
+        }
+      */
       return res.status(404).json('Location not found');
     } catch (err) {
+      /* #swagger.responses[500] = { 
+    description: 'Internal server error'  
+    } */
       return res.status(500).json(err);
     }
   }
@@ -110,9 +98,9 @@ locationRouter.post(
   body('latitude').isString(),
   async (req: Request, res: Response) => {
     //#swagger.tags = ['Locations']
-    //#swagger.summary: 'Add a new location'
-    //#swagger.description: 'Add a new location to the database'
-    /*#swagger.parameters['location'] ={
+    //#swagger.summary = 'Add a new location'
+    //#swagger.description = 'Add a new location to the database'
+    /*#swagger.parameters['Location'] ={
       in: 'body',
       description:'Location that is being added',
       schema: { $ref: "#/definitions/AddLocation" }
@@ -160,29 +148,23 @@ locationRouter.put(
     // #swagger.summary = 'Update an location by ID'
     // #swagger.description = 'Updates the location with the given ID'
     /* #swagger.parameters['id'] = {
-        in: 'path',
-        description: 'ID of the location to be updated',
-        required: true,
-        type: 'integer'
-} */
+      in: 'path',
+      description: 'ID of the location to be updated',
+      required: true,
+      type: 'integer'
+    } */
     /* #swagger.parameters['Location'] = {
-        in: 'body',
-        description: 'Data to update location',
-        required: true,
-        schema: { $ref: "#/definitions/UpdateLocation" }
-} */
-    /*#swagger.responses[201] = { 
-  description: 'Location updated', 
-  schema: { $ref: "#/definitions/Location" },
-  }*/
-    /*#swagger.responses[404] = { 
-  description: 'Location not found' 
-  }*/
-    /*#swagger.responses[500] = { 
-  description: 'Internal server error'  
-  } */
+      in: 'body',
+      description: 'Data to update location',
+      required: true,
+      schema: { $ref: "#/definitions/UpdateLocation" }
+    } */
+
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
+      /*#swagger.responses[404] = { 
+      description: 'Location not found' 
+      }*/
       return res
         .status(400)
         .json({ errors: errors.array() });
@@ -192,8 +174,15 @@ locationRouter.put(
       const location = req.body;
       const updatedLocation =
         await LocationServices.updateLocation(location);
+      /*#swagger.responses[201] = { 
+      description: 'Location updated', 
+      schema: { $ref: "#/definitions/Location" }
+      }*/
       return res.status(201).json(updatedLocation);
     } catch (err) {
+      /*#swagger.responses[500] = { 
+      description: 'Internal server error'  
+      } */
       return res.status(500).json(err);
     }
   }
@@ -201,7 +190,6 @@ locationRouter.put(
 
 //POST: Delete Location
 
-//TODO swagger.security
 locationRouter.delete(
   '/:id',
   isAuthenticated,
@@ -210,28 +198,27 @@ locationRouter.delete(
     //#swagger.summary = 'Delete an location by ID'
     //#swagger.description = 'Deletes the location with the given ID'
     /*#swagger.parameters['id'] = { 
-  in: 'path', 
-  description: 'ID of location to delete', 
-  required: true, 
-  type: 'integer' 
-} */
-    /*#swagger.responses[201] = { 
-  description: 'Location deleted', 
-  schema: { 
-    type: 'string' 
-  } 
-}*/
-    /*#swagger.responses[500] = { 
-  description: 'Internal server error'  
-  } */
+      in: 'path', 
+      description: 'ID of location to delete', 
+      required: true, 
+      type: 'integer' 
+    } */
+    
     try {
       await LocationServices.deleteLocation(
         parseInt(req.params.id, 10)
       );
+      /*#swagger.responses[201] = { 
+      description: 'Location deleted', 
+      schema: { type: 'string' } 
+      */
       return res
         .status(201)
         .json('Location deleted successfully');
     } catch (err) {
+      /*#swagger.responses[500] = { 
+      description: 'Internal server error'  
+      } */
       return res.status(500).json(err);
     }
   }
